fix sidebar height on mobile

--- a/_sass/sidebar.sass
+++ b/_sass/sidebar.sass
@@ -15,7 +15,7 @@
 .toc
     display: flex
     flex-direction: column
-    flex: 0 0 300px
+    // flex: 0 0 300px
     margin-top: 80px
     background-color: #f7f7f7
     padding: 20px 20px
@@ -55,14 +55,15 @@
 // 	flex-shrink: 0
 // 	width: 350px
 
-// .sidebar
-//     display: flex
-//     flex-direction: column
-//     flex-grow: 0
-//     flex-shrink: 1
-//     flex-basis: auto
-//     justify-content: flex-start
-//     align-items: stretch
+.sidebar
+    display: flex
+    flex-direction: column
+    // flex-grow: 0
+    // flex-shrink: 1
+    // flex-basis: auto
+    justify-content: flex-start
+    align-items: stretch
+    width: 300px
 
 //     width: 100%
 //     padding-left: 20px
